<resources>
    <string name="app_name">GameNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Navigation drawer strings -->
    <string name="news">News</string>
    <string name="games">Games</string>
    <string name="favorites">Favorites</string>

    <string name="hint_word">Game...</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">News not saved because it is empty.</string>
    <string name="title_activity_login">GameNews</string>

    <!-- Strings relacionadas al login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_log_out">Log out</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_timed_out">Request timed out</string>
    <string name="error_no_internet">The request can not be process. Check your internet connection</string>
    <string name="error_min_length">%1$s length must be at least %2$d characters</string>
    <string name="error_login_credentials">Username or password is incorrect.</string>

    <!-- Strings por default en cada cardview -->
    <string name="cover_image">Cover Image</string>
    <string name="no_title_available">No title available</string>
    <string name="no_description_available">No description available</string>

    <string name="message_fav_saved">Favorite saved</string>
    <string name="message_fav_deleted">Favorite deleted</string>
    <string name="message_session_expired_title">Session lost</string>
    <string name="message_session_expired">Session has expired. Please login again.</string>
    <string name="message_no_internet">Unable to connect to internet. Please check your connection</string>
    <string name="message_net_failure">Unable to complete. Please try again later</string>

</resources>
